syntax = "proto3";
package pbauth;

option go_package = "./pbauth";


message SignInRequest {
    string email = 1;
    string password = 2;
}

message SignInResponse {
    string token = 1;
}

service AuthService {
    rpc SignIn(SignInRequest) returns (SignInResponse);
}